trying to fix footer covering the list

--- a/app/assets/stylesheets/rsvps.scss
+++ b/app/assets/stylesheets/rsvps.scss
@@ -28,6 +28,10 @@
   }
 }
 
+.rsvp:last-child {
+  margin-bottom: 54px;
+}
+
 .rsvp, .site, .choose_site, .choose_event, .event {
   width: 90%;
   height: 63px;
